; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i2c/extr_sil164_drv.c_sil164_encoder_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i2c/extr_sil164_drv.c_sil164_encoder_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_encoder = type { i32 }
%struct.sil164_priv = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_encoder*)* @sil164_encoder_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sil164_encoder_destroy(%struct.drm_encoder* %0) #0 {
  %2 = alloca %struct.drm_encoder*, align 8
  %3 = alloca %struct.sil164_priv*, align 8
  store %struct.drm_encoder* %0, %struct.drm_encoder** %2, align 8
  %4 = load %struct.drm_encoder*, %struct.drm_encoder** %2, align 8
  %5 = call %struct.sil164_priv* @to_sil164_priv(%struct.drm_encoder* %4)
  store %struct.sil164_priv* %5, %struct.sil164_priv** %3, align 8
  %6 = load %struct.sil164_priv*, %struct.sil164_priv** %3, align 8
  %7 = getelementptr inbounds %struct.sil164_priv, %struct.sil164_priv* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.sil164_priv*, %struct.sil164_priv** %3, align 8
  %12 = getelementptr inbounds %struct.sil164_priv, %struct.sil164_priv* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @i2c_unregister_device(i64 %13)
  br label %15

15:                                               ; preds = %10, %1
  %16 = load %struct.sil164_priv*, %struct.sil164_priv** %3, align 8
  %17 = call i32 @kfree(%struct.sil164_priv* %16)
  %18 = load %struct.drm_encoder*, %struct.drm_encoder** %2, align 8
  %19 = call i32 @drm_i2c_encoder_destroy(%struct.drm_encoder* %18)
  ret void
}

declare dso_local %struct.sil164_priv* @to_sil164_priv(%struct.drm_encoder*) #1

declare dso_local i32 @i2c_unregister_device(i64) #1

declare dso_local i32 @kfree(%struct.sil164_priv*) #1

declare dso_local i32 @drm_i2c_encoder_destroy(%struct.drm_encoder*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
